tests/h1c_h1c_passthrough/deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: h1c_h1c_passthrough
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: perf.test.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: h1c-h1c-passthr
            port:
              number: 9090
  tls:
  - hosts:
    - "perf.test.com"
